--- a/app/src/main/res/layout/fragment_checkout_screen.xml
+++ b/app/src/main/res/layout/fragment_checkout_screen.xml
@@ -72,7 +72,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_centerInParent="true"
-                        android:layout_margin="@dimen/_15sdp"
+                        android:layout_marginHorizontal="@dimen/_15sdp"
+                        android:layout_marginBottom="@dimen/_20sdp"
                         app:cardCornerRadius="@dimen/_30sdp">
 
                         <TextView
@@ -173,7 +174,7 @@
                     android:layout_marginStart="@dimen/_15sdp"
                     android:layout_toEndOf="@+id/imageMeet"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text="Meet at my door"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13sdp" />
 
@@ -426,17 +427,17 @@
                 android:id="@+id/relIngredients"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/relSuperMarketsItems"
                 android:layout_marginHorizontal="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:visibility="gone"
-                android:layout_below="@+id/relSuperMarketsItems">
+                android:visibility="gone">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcyIngredients"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
             </RelativeLayout>
 
@@ -714,60 +715,68 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/relDebitCreditCard"
+                        android:layout_marginBottom="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10sdp"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
-                        <ImageView
-                            android:id="@+id/idVisaImages"
-                            android:layout_width="wrap_content"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rcyCardDetails"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/visa_rounded_image" />
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            android:orientation="vertical"/>
 
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="@dimen/_10sdp"
-                            android:layout_toEndOf="@+id/idVisaImages">
+                        <!--  <ImageView
+                              android:id="@+id/idVisaImages"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:src="@drawable/visa_rounded_image" />
 
-                            <TextView
-                                android:id="@+id/tvVisaName"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="visa"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/_13sdp" />
+                          <RelativeLayout
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:layout_centerVertical="true"
+                              android:layout_marginStart="@dimen/_10sdp"
+                              android:layout_toEndOf="@+id/idVisaImages">
 
-                            <TextView
-                                android:id="@+id/tvPreferred"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_20sdp"
-                                android:layout_marginTop="@dimen/_2sdp"
-                                android:layout_toEndOf="@+id/tvVisaName"
-                                android:text="Preferred"
-                                android:textColor="#FE9F45"
-                                android:textSize="@dimen/_10sdp" />
+                              <TextView
+                                  android:id="@+id/tvVisaName"
+                                  android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:text="visa"
+                                  android:textColor="@color/black"
+                                  android:textSize="@dimen/_13sdp" />
 
-                            <TextView
-                                android:id="@+id/tvCardNumber"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tvVisaName"
-                                android:hint="**** **** **** 4242"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/_13sdp" />
+                              <TextView
+                                  android:id="@+id/tvPreferred"
+                                  android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:layout_marginStart="@dimen/_20sdp"
+                                  android:layout_marginTop="@dimen/_2sdp"
+                                  android:layout_toEndOf="@+id/tvVisaName"
+                                  android:text="Preferred"
+                                  android:textColor="#FE9F45"
+                                  android:textSize="@dimen/_10sdp" />
 
-                        </RelativeLayout>
+                              <TextView
+                                  android:id="@+id/tvCardNumber"
+                                  android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:layout_below="@+id/tvVisaName"
+                                  android:hint="**** **** **** 4242"
+                                  android:textColor="@color/black"
+                                  android:textSize="@dimen/_13sdp" />
 
-                        <ImageView
-                            android:id="@+id/imageCheckRadio"
-                            android:layout_width="@dimen/_18sdp"
-                            android:layout_height="@dimen/_18sdp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="@dimen/_10sdp"
-                            android:src="@drawable/radio_uncheck_gray_icon" />
+                          </RelativeLayout>
+
+                          <ImageView
+                              android:id="@+id/imageCheckRadio"
+                              android:layout_width="@dimen/_18sdp"
+                              android:layout_height="@dimen/_18sdp"
+                              android:layout_alignParentEnd="true"
+                              android:layout_centerVertical="true"
+                              android:layout_marginEnd="@dimen/_10sdp"
+                              android:src="@drawable/radio_uncheck_gray_icon" />-->
 
                     </RelativeLayout>
 
@@ -841,6 +850,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/rcyDebitCreditCard"
+                        android:visibility="gone"
                         android:layout_marginTop="@dimen/_15sdp">
 
                         <TextView
@@ -859,6 +869,7 @@
                         android:id="@+id/relGooglePay"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:layout_below="@+id/relPayWallet"
                         android:layout_marginVertical="@dimen/_15sdp">
 
