--- a/app/src/main/res/layout/fragment_shopping_missing_ingredients.xml
+++ b/app/src/main/res/layout/fragment_shopping_missing_ingredients.xml
@@ -55,6 +55,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="Tesco"
+                android:visibility="gone"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
