--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -589,6 +589,7 @@
                                 android:clickable="false">
 
                                 <TextView
+                                    android:id="@+id/tvPlanMeal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:paddingHorizontal="@dimen/_10sdp"
