--- a/app/src/main/res/layout/fragment_statistics_graph.xml
+++ b/app/src/main/res/layout/fragment_statistics_graph.xml
@@ -96,6 +96,7 @@
                     android:background="@drawable/orange_shape_bg">
 
                     <TextView
+                        android:id="@+id/tvDateCalendar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawablePadding="@dimen/_5sdp"
