--- a/app/src/main/res/layout/adapter_layout_your_recipe_item.xml
+++ b/app/src/main/res/layout/adapter_layout_your_recipe_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/_140sdp"
+    android:layout_width="@dimen/_120sdp"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_10sdp"
     app:cardCornerRadius="@dimen/_10sdp"
@@ -19,9 +19,9 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageFood"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_110sdp"
+                android:layout_height="@dimen/_100sdp"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_food_image"
+                android:src="@drawable/no_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
