--- a/app/src/main/res/layout/adapter_onboarding_subscription_item.xml
+++ b/app/src/main/res/layout/adapter_onboarding_subscription_item.xml
@@ -42,8 +42,8 @@
                 android:textSize="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:fontFamily="@font/montserrat_semibold"
-                android:textColor="@color/black"
+                android:fontFamily="@font/inter_bold"
+                android:textColor="#1F1E1E"
                 android:layout_below="@id/imageProfile"/>
             <RelativeLayout
                 android:id="@+id/relFreeTrials"
@@ -59,8 +59,8 @@
                     android:textSize="@dimen/_11sdp"
                     android:drawableStart="@drawable/gift_icon"
                     android:drawablePadding="@dimen/_10sdp"
-                    android:fontFamily="@font/montserrat"
-                    android:textColor="@color/black" />
+                    android:fontFamily="@font/inter"
+                    android:textColor="#3C4541" />
 
             </RelativeLayout>
             <RelativeLayout
@@ -77,8 +77,8 @@
                     android:textSize="@dimen/_11sdp"
                     android:drawableStart="@drawable/dollar_icon"
                     android:drawablePadding="@dimen/_10sdp"
-                    android:fontFamily="@font/montserrat"
-                    android:textColor="@color/black" />
+                    android:fontFamily="@font/inter"
+                    android:textColor="#3C4541" />
             </RelativeLayout>
             <RelativeLayout
                 android:id="@+id/relSecretCookBook"
@@ -95,8 +95,8 @@
                     android:textSize="@dimen/_11sdp"
                     android:drawableStart="@drawable/secret_cookbook_icon"
                     android:drawablePadding="@dimen/_10sdp"
-                    android:fontFamily="@font/montserrat"
-                    android:textColor="@color/black" />
+                    android:fontFamily="@font/inter"
+                    android:textColor="#3C4541" />
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
