--- a/app/src/main/res/layout/fragment_home_subscription_all_plan.xml
+++ b/app/src/main/res/layout/fragment_home_subscription_all_plan.xml
@@ -185,6 +185,7 @@
                             android:fontFamily="@font/inter_semibold"
                             android:padding="@dimen/_2sdp"
                             android:text="Starter"
+                            android:gravity="center"
                             android:textColor="#121212"
                             android:textSize="@dimen/_11sdp" />
 
@@ -253,11 +254,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:background="@drawable/popular_click_bg"
+                            android:background="@drawable/basic_click_bg"
                             android:fontFamily="@font/inter_semibold"
                             android:padding="@dimen/_2sdp"
+                            android:gravity="center"
                             android:text="Popular"
-                            android:textColor="@color/white"
+                            android:textColor="#121212"
                             android:textSize="@dimen/_11sdp" />
 
                         <ImageView
@@ -336,6 +338,7 @@
                             android:includeFontPadding="false"
                             android:padding="@dimen/_2sdp"
                             android:text="Best value"
+                            android:gravity="center"
                             android:textColor="#121212"
                             android:textSize="@dimen/_11sdp" />
 
