--- a/app/src/main/res/layout/adapter_order_history_item.xml
+++ b/app/src/main/res/layout/adapter_order_history_item.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:id="@+id/relImages"
-        android:layout_width="@dimen/_90sdp"
+        android:layout_width="@dimen/_80sdp"
         android:layout_height="@dimen/_80sdp">
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -55,8 +55,6 @@
                     android:textColor="@color/light_black"
                     android:textSize="@dimen/_11sdp" />
 
-
-
             </RelativeLayout>
 
             <RelativeLayout
@@ -69,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text="Delivered - 926 Gainsway Street, NY 12603"
+                    android:text=""
                     android:textColor="@color/light_black"
                     android:textSize="@dimen/_11sdp" />
 
