--- a/app/src/main/res/layout/adapter_meal_type_item.xml
+++ b/app/src/main/res/layout/adapter_meal_type_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViews"
-        android:layout_width="@dimen/_120sdp"
+        android:layout_width="@dimen/_140sdp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_margin="@dimen/_5sdp"
@@ -135,24 +135,29 @@
                     android:layout_below="@+id/relPrices"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp">
+
                     <TextView
                         android:id="@+id/tvAddToPlan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/add_to_plan_bg"
                         android:drawablePadding="@dimen/_6sdp"
-                        android:padding="@dimen/_4sdp"
+                        android:paddingVertical="@dimen/_4sdp"
+                        android:paddingHorizontal="@dimen/_7sdp"
                         android:text="Add to plan"
                         android:textColor="#FFFFFF"
                         android:textSize="@dimen/_10sdp"
                         app:drawableStartCompat="@drawable/add_icon" />
+
                     <ImageView
                         android:id="@+id/imgBasket"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="@dimen/_3sdp"
                         android:src="@drawable/orange_basket_icon" />
+
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
