--- a/app/src/main/res/layout/fragment_searched_recipe_breakfast.xml
+++ b/app/src/main/res/layout/fragment_searched_recipe_breakfast.xml
@@ -38,6 +38,7 @@
                 android:layout_centerInParent="true"
                 android:fontFamily="@font/montserrat_semibold"
                 android:text=""
+                android:gravity="center"
                 android:layout_marginHorizontal="@dimen/_4sdp"
                 android:layout_toLeftOf="@id/left"
                 android:textColor="#000000"
