--- a/app/src/main/res/layout/fragment_super_markets_near_by.xml
+++ b/app/src/main/res/layout/fragment_super_markets_near_by.xml
@@ -106,7 +106,8 @@
                 <com.google.android.gms.maps.MapView
                     android:id="@+id/mapView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true" />
 
             </androidx.cardview.widget.CardView>
 
