Dhananjay singh 29_04_2025 17_23PM
29_04_2025___17_23PM

--- a/app/src/main/res/layout/fragment_checkout_screen.xml
+++ b/app/src/main/res/layout/fragment_checkout_screen.xml
@@ -174,7 +174,7 @@
                     android:layout_marginStart="@dimen/_15sdp"
                     android:layout_toEndOf="@+id/imageMeet"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text=""
+                    android:text="Meet at my door"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13sdp" />
 
