--- a/app/src/main/res/layout/fragment_order_details_screen.xml
+++ b/app/src/main/res/layout/fragment_order_details_screen.xml
@@ -32,6 +32,7 @@
                     android:src="@drawable/black_images_back" />
 
                 <TextView
+                    android:id="@+id/tvOrderId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
