Dhananjay singh 29_04_2025 20_34_PM
 29_04_2025 20_34_PM

--- a/app/src/main/res/layout/fragment_add_number_verify.xml
+++ b/app/src/main/res/layout/fragment_add_number_verify.xml
@@ -248,7 +248,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/relDidNotResend"
                     android:layout_marginTop="@dimen/_7sdp"
-                    android:visibility="invisible">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/textResendVerification"
