--- a/app/src/main/res/layout/fragment_address_map_full_screen.xml
+++ b/app/src/main/res/layout/fragment_address_map_full_screen.xml
@@ -59,6 +59,7 @@
                 android:padding="@dimen/_10sdp">
 
                 <ImageView
+                    android:id="@+id/imageHome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/home_icon" />
@@ -86,6 +87,7 @@
                 android:padding="@dimen/_10sdp">
 
                 <ImageView
+                    android:id="@+id/imageWork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/work_icon" />
